--- a/style.css
+++ b/style.css
@@ -29,3 +29,14 @@ body {
   margin: 0 auto;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
 }
+
+.twitter {
+  position: fixed;
+  bottom: 40px;
+  width: 100%;
+  color: #555;
+}
+.twitter a {
+  text-decoration: none;
+  color: #333;
+}
